force-app/main/default/objects/Exercise__c/Exercise__c.object-meta.xml
<CustomObject>
    <description>Objeto para guardar todos los ejercicios</description>
    <label>Exercise</label>
    <nameField>
        <label>Exercise Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exercises</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>