force-app/main/default/objects/Exercise__c/fields/Related_muscle__c.field-meta.xml
<CustomField>
    <fullName>Related_muscle__c</fullName>
    <description>Músculo de activación del ejercicio</description>
    <label>Related muscle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abs</fullName>
            </value>
            <value>
                <fullName>Back</fullName>
            </value>
            <value>
                <fullName>Biceps</fullName>
            </value>
            <value>
                <fullName>Chest</fullName>
            </value>
            <value>
                <fullName>Deltoid</fullName>
            </value>
            <value>
                <fullName>Hip</fullName>
            </value>
            <value>
                <fullName>Thigh</fullName>
            </value>
            <value>
                <fullName>Triceps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>