force-app/main/default/objects/Exercise__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>url de la imágen</description>
    <label>URL</label>
    <type>Url</type>
</CustomField>